# moda

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml
SampleModaApp/: SampleModaApp.sln
SampleModaApp/Moda/: Moda.vcxproj  Moda.vcxproj.filters
SampleModaApp/SampleModaApp/: SampleModaApp.vcxproj  main.cpp
VisualStudioProjects/: VisualStudioProjects.sln
VisualStudioProjects/ModaTestApplication/: ModaTestApplication.cpp  ModaTestApplication.vcxproj  ModaTestApplication.vcxproj.filters
VisualStudioProjects/OriginalSolutions/: OriginalHSS.h  OriginalHVE.h  OriginalIQHV.h  OriginalQEHC.h  OriginalSolutions.cpp  OriginalSolutions.vcxproj  OriginalSolutions.vcxproj.filters
VisualStudioProjects/UnitTests/: FunctionalTests.cpp  TimeTests.cpp  UnitTests.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters
VisualStudioProjects/VisualStudioProjects/: VisualStudioProjects.vcxproj  VisualStudioProjects.vcxproj.filters
cmake/: modaConfig.cmake.in
docs/source/: api.rst  conf.py  datasets.rst  downloads.rst  index.rst  installation_macos.rst  installation_python.rst  installation_ubuntu.rst  installation_windows.rst  samples.rst  solvers.rst  usage.rst
moda/: BestSolution.h  DBHVE.cpp  DBHVE.h  DBHVESolver.cpp  DBHVESolver.h  DataSet.cpp  DataSet.h  DataSetParameters.cpp  DataSetParameters.h  DynamicStructures.cpp  DynamicStructures.h  ExecutionContext.cpp  ExecutionContext.h  ExecutionPool.cpp  ExecutionPool.h  ExecutionService.cpp  ExecutionService.h  HSS.cpp  HSS.h  HSSSolver.cpp  HSSSolver.h  Helpers.cpp  Helpers.h  Hypervolume.cpp  Hypervolume.h  IQHV.cpp  IQHV.h  IQHVSolver.cpp  IQHVSolver.h  ListSet.cpp  ListSet.h  MCHV.cpp  MCHV.h  MCHVESolver.cpp  MCHVESolver.h  MemoryManager.cpp  MemoryManager.h  NDTree.cpp  NDTree.h  ObjectivesTransformer.cpp  (+43 more)
moda/python-wrap/: 4,47338340e-04.txt  HSS.cpp  HSSSolver.cpp  Hypervolume.cpp  NDTree.cpp  QEHC.cpp  QEHCSolver.cpp  SolverParameters.cpp  SubProblemsStackLevel.cpp  SubproblemsPool.cpp  moda.cpp  (+28 more)
sample-file/: data_6_500_convex_triangular_1  dominated_points  sample_file
src/: DBHVE.h  DBHVESolver.cpp  DBHVESolver.h  DataSet.cpp  DataSetParameters.h  ExecutionPool.cpp  ExecutionPool.h  IQHV.cpp  IQHV.h  IQHVSolver.h  IQHV_Contribution.cpp  IQHV_experimental1.cpp  IQHV_experimental2.cpp  MCHV.h  MCHVESolver.cpp  MemoryManager.cpp  Point.cpp  PointTests.cpp  QEHCSolver.cpp  QEHC_parallel.cpp  QEHC_parallel_take2.cpp  QHV_BQ.h  QHV_BQSolver.cpp  QHV_BQSolver.h  QHV_BR.cpp  QHV_BR.h  Result.h  SPData.h  SolverParameters.cpp  SolverSettings.cpp  SubproblemsPool.h  sources.cmake
vcpkg-moda/: portfile.cmake  usage  vcpkg.json
(+132 files in other folders)
